did some routing

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -31,8 +31,8 @@
                     <hr class="my-4">
                     <p>Each fitness program comes with a full workout plan and playlist to get you motivated at the gym.
                         What's your exercise?</p>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Cardio</a>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Strength Training</a>
+                    <a class="btn btn-primary btn-lg" href="/cardio" role="button">Cardio</a>
+                    <a class="btn btn-primary btn-lg" href="/muscle_building" role="button">Strength Training</a>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Powerlifting</a>
                 </div>
             </div>
