--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -4,7 +4,7 @@
 
 <ul>
   {{#each mscl}}
-    <p>{{this.id}}. {{this.ex_name}} </p>
+    <p>{{this.id}}. {{this.ex_name}} {{this.body_part}} </p>
   {{/each}}
 </ul>
 
