--- a/views/cardio.handlebars
+++ b/views/cardio.handlebars
@@ -1,37 +1,66 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Navbar w/ text</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                  </ul>
-                  <span class="navbar-text">
-                    Navbar text with an inline element
-                  </span>
-                </div>
-              </nav>
-              
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Exo+2|Pacifico|Permanent+Marker|Righteous&display=swap"
+        rel="stylesheet">
+
+    <title>Workoutflow</title>
+</head>
+
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">WORKOUTFLOW</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cardio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Strength Training</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Powerlifting</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="jumbotron jumbotron-fluid bg-transparent">
                     <div class="container">
                         <h1 class="display-4">WORKOUTFLOW</h1>
-                        <p class="lead">Ready to get your heart pumping? Follow this step by step guide to complete your
+                        <p class="lead">Ready to get your heart pumping?
+                            <br>
+                            Follow this step by step guide to complete your
                             cardio workout. Don’t forget hit play on your playlist!</p>
                         <hr class="my-4">
-                        <p>Videos have been added for your convenience to instruct you on proper form.
-                        </p>
+                        <p>Videos have been added for your convenience to instruct you on proper form.</p>
                     </div>
                 </div>
             </div>
@@ -39,27 +68,34 @@
     </div>
 
     <div class="container">
-
-
         <div class="row">
-            <!-- New Burgers -->
-            <div class="col-sm-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading" id="lefthead"><strong>Exercises To Do</strong></div>
-                    <div class="panel-body">
-                        {{#each workout}}
-                        {{#unless this.completed}}
-                        <pre>{{this.id}}. {{this.exercise}}</pre>
-                        <form method="POST" action="/..../update?_method=PUT" class="button-size">
-                            <input type="hidden" name="work_id" type="text" value={{this.id}}>
-                            <button type="submit" class="btn btn-default">Completed</button>
-                        </form>
-                        {{/unless}}
-                        {{/each}}
-                    </div>
-                </div>
+            <!-- to do -->
+            <div class="col-sm-6">    
+                    <div class="card bg-light mb-3" style="width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Cardio</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Day 1</h6>
+                                <p class="card-text">*really cool workout here*</p>
+                                <a href="#" class="card-link">Video link</a>                            
+                            </div>
+                        </div>
+                        <!-- {{!-- <div class="panel panel-default">
+                            <div class="panel-heading" id="lefthead"><strong>Exercises To Do</strong></div>
+                            <div class="panel-body">
+                                {{#each workout}}
+                                {{#unless this.completed}}
+                                <pre>{{this.id}}. {{this.exercise}}</pre>
+                                <form method="POST" action="/..../update?_method=PUT" class="button-size">
+                                    <input type="hidden" name="work_id" type="text" value={{this.id}}>
+                                    <button type="submit" class="btn btn-default">Completed</button>
+                                </form>
+                                {{/unless}}
+                                {{/each}}
+                            </div>
+                        </div> --}} -->
             </div>
-            <!-- Devoured Burgers -->
+            
+            <!-- completed -->
             <div class="col-sm-6">
                 <div class="panel panel-default">
                     <div class="panel-heading" id="righthead"><strong>Exercises Completed</strong></div>
@@ -76,6 +112,11 @@
                 </div>
             </div>
         </div><!-- /row -->
-
-
     </div>
+
+    <div class="footer">
+        <p>&copy; Copyright 2019</p>
+    </div>
+</body>
+
+</html>
