worked on routing, created strength training handlebars file

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -34,16 +34,16 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cardio</a>
+                    <a class="nav-link" href="/cardio">Cardio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Strength Training</a>
+                    <a class="nav-link" href="/muscle_building">Muscle Building</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Powerlifting</a>
+                    <a class="nav-link" href="/strength_training">Strength Training</a>
                 </li>
             </ul>
         </div>
@@ -62,9 +62,9 @@
                     <p>Each fitness program comes with a full workout plan and playlist to get you motivated at the gym.
                         What's your exercise?</p>
 
-                    <a class="btn btn-info btn-lg" href="#" role="button">Cardio</a>
-                    <a class="btn btn-info btn-lg" href="#" role="button">Strength Training</a>
-                    <a class="btn btn-info btn-lg" href="#" role="button">Powerlifting</a>
+                    <a class="btn btn-info btn-lg" href="/cardio" role="button">Cardio</a>
+                    <a class="btn btn-info btn-lg" href="/muscle_building" role="button">Muscle Building</a>
+                    <a class="btn btn-info btn-lg" href="/strength_training" role="button">Strength Training</a>
 
                 </div>
             </div>
@@ -82,7 +82,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href="#">
+                            <a href="/cardio">
                                 <img src="../images/cardio.jpeg" class="d-block w-100" alt="workout">
                             </a>
                             <div class="carousel-caption">
@@ -90,19 +90,19 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="#">
+                            <a href="/muscle_building">
+                                <img src="../images/Powerlifting.jpg" class="d-block w-100" alt="workout">
+                            </a>
+                            <div class="carousel-caption">
+                                <h1>Muscle Building</h1>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="/strength_training">
                                 <img src="../images/strengthTraining.jpg" class="d-block w-100" alt="workout">
                             </a>
                             <div class="carousel-caption">
                                 <h1>Strength Training</h1>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="#">
-                                <img src="../images/Powerlifting.jpg" class="d-block w-100" alt="workout">
-                            </a>
-                            <div class="carousel-caption">
-                                <h1>Powerlifting</h1>
                             </div>
                         </div>
                     </div>
