--- a/views/strength_training.handlebars
+++ b/views/strength_training.handlebars
@@ -73,10 +73,10 @@
             <div class="col-sm-6">    
                     <div class="card bg-light mb-3" style="width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Cardio</h5>
+                                <h5 class="card-title">Strength Training</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Day 1</h6>
                                     <ul>
-                                    {{#each crd}}
+                                    {{#each str}}
                                     <p>{{this.id}}. {{this.ex_name}} </p>
                                     {{/each}}
                                     </ul>
