fixed some errors

--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -44,7 +44,7 @@
           <a class="nav-link" href="/muscle_building">Muscle Building</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/strenth_training">Strength Training</a>
+          <a class="nav-link" href="/strength_training">Strength Training</a>
         </li>
       </ul>
     </div>
