fixed bug with exporting and importing

--- a/views/cardio.handlebars
+++ b/views/cardio.handlebars
@@ -77,7 +77,7 @@
                                 <h6 class="card-subtitle mb-2 text-muted">Day 1</h6>
                                     <ul>
                                     {{#each crd}}
-                                    <p>{{this.id}}. {{this.ex_name}} </p>
+                                    <p>{{id}}. {{ex_name}} </p>
                                     {{/each}}
                                     </ul>
                                 <p class="card-text">*really cool workout here*</p>
