changed cardio and strengthtraining workout tables

--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -56,11 +56,11 @@
         <div class="jumbotron jumbotron-fluid bg-transparent">
           <div class="container">
             <h1 class="display-4">WORKOUTFLOW</h1>
-            <p class="lead">Ready to get your heart pumping? Follow this step by step guide to complete your
+            <p class="lead">Ready to get your heart pumping? 
+              <br>
+              Follow this step by step guide to complete your
               strength training workout. Don’t forget hit play on your playlist!</p>
             <hr class="my-4">
-            <p>Videos have been added for your convenience to instruct you on proper form.
-            </p>
           </div>
         </div>
       </div>
@@ -80,8 +80,7 @@
                                   <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
                                     {{/if_eq}}
                                   {{/each}}
-                                  </ul>
-                                <a href="#" class="card-link">Video link</a>                            
+                                  </ul>                       
                             </div>
                     </div>                       
             </div>
@@ -95,8 +94,7 @@
                                   <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
                                     {{/if_eq}}
                                   {{/each}}
-                                  </ul>
-                                <a href="#" class="card-link">Video link</a>                            
+                                  </ul>                          
                             </div>
                     </div>                       
             </div>
@@ -112,8 +110,7 @@
                                   <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
                                     {{/if_eq}}
                                   {{/each}}
-                                  </ul>
-                                <a href="#" class="card-link">Video link</a>                            
+                                  </ul>         
                             </div>
                     </div>                       
             </div>
@@ -128,7 +125,6 @@
                                     {{/if_eq}}
                                   {{/each}}
                                   </ul>
-                                <a href="#" class="card-link">Video link</a>                            
                             </div>
                     </div>                       
             </div>
