--- a/views/strength_training.handlebars
+++ b/views/strength_training.handlebars
@@ -60,7 +60,6 @@
                             Follow this step by step guide to complete your
                             cardio workout. Don’t forget hit play on your playlist!</p>
                         <hr class="my-4">
-                        <p>Videos have been added for your convenience to instruct you on proper form.</p>
                     </div>
                 </div>
             </div>
@@ -71,54 +70,48 @@
         <div class="row">
             <!-- to do -->
             <div class="col-sm-6">    
-                    <div class="card bg-light mb-3" style="width: 18rem;">
+                    <div class="card bg-light mb-3" style="width: 25rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Strength Training</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Day 1</h6>
+                                <h5 class="card-title">Day 1</h5>
                                     <ul>
                                     {{#each str}}
-                                    <p>{{id}}. {{ex_name}} </p>
+                                        {{#if_eq day 1}}
+                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                        {{/if_eq}}
                                     {{/each}}
-                                    </ul>
-                                <p class="card-text">*really cool workout here*</p>
-                                <a href="#" class="card-link">Video link</a>                            
+                                    </ul>                        
                             </div>
                         </div>
-                        <!-- {{!-- <div class="panel panel-default">
-                            <div class="panel-heading" id="lefthead"><strong>Exercises To Do</strong></div>
-                            <div class="panel-body">
-                                {{#each workout}}
-                                {{#unless this.completed}}
-                                <pre>{{this.id}}. {{this.exercise}}</pre>
-                                <form method="POST" action="/..../update?_method=PUT" class="button-size">
-                                    <input type="hidden" name="work_id" type="text" value={{this.id}}>
-                                    <button type="submit" class="btn btn-default">Completed</button>
-                                </form>
-                                {{/unless}}
-                                {{/each}}
+            </div>
+            <div class="col-sm-6">    
+                    <div class="card bg-light mb-3" style="width: 25rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Day 2</h5>
+                                    <ul>
+                                    {{#each str}}
+                                        {{#if_eq day 2}}
+                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                        {{/if_eq}}
+                                    {{/each}}
+                                    </ul>                     
                             </div>
-                        </div> --}} -->
+                        </div>
+            </div>
+            <div class="col-sm-6">    
+                    <div class="card bg-light mb-3" style="width: 25rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Day 3</h5>
+                                    <ul>
+                                    {{#each str}}
+                                        {{#if_eq day 3}}
+                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                        {{/if_eq}}
+                                    {{/each}}
+                                    </ul>                
+                            </div>
+                    </div>
             </div>
             
-            <!-- completed -->
-            <div class="col-sm-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading" id="righthead"><strong>Exercises Completed</strong></div>
-                    <div class="panel-body">
-                        {{!-- <ul>
-                            {{#each workout}}
-                            {{#if this.completed}}
-                            <input class="form-control" type="text" placeholder="{{this.id}}. {{this.completed}}"
-                                readonly>
-                            {{/if}}
-                            {{/each}}
-                        </ul> --}}
-                    </div>
-                </div>
-            </div>
-        </div><!-- /row -->
-    </div>
-
     <div class="footer">
         <p>&copy; Copyright 2019</p>
     </div>
