changed seeds.sql for cardio and added playlists

--- a/views/cardio.handlebars
+++ b/views/cardio.handlebars
@@ -111,7 +111,10 @@
                             </div>
                     </div>
             </div>            
+        <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1DWSJHnPb1f0X3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
+
+    
     </div>
 
     <div class="footer">
