--- a/views/strength_training.handlebars
+++ b/views/strength_training.handlebars
@@ -111,7 +111,9 @@
                             </div>
                     </div>
             </div>
-            
+            <iframe src="https://open.spotify.com/embed/user/jojomadclown/playlist/1k49riC4JGNKYLmaWpCFn0" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+    </div>
     <div class="footer">
         <p>&copy; Copyright 2019</p>
     </div>
