--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -128,6 +128,7 @@
                             </div>
                     </div>                       
             </div>
+            <iframe src="https://open.spotify.com/embed/user/womenshealthmag/playlist/67wCqxrWzACo8nWAHbPJHU" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 </div>
   <div class="footer">
