--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -27,7 +27,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">WORKOUTFLOW</a>
+    <a class="navbar-brand" href="/">WORKOUTFLOW</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,7 @@
             <p class="lead">Ready to get your heart pumping? 
               <br>
               Follow this step by step guide to complete your
-              strength training workout. Don’t forget hit play on your playlist!</p>
+              muscle building workout. Don’t forget hit play on your playlist!</p>
             <hr class="my-4">
           </div>
         </div>
@@ -73,11 +73,11 @@
             <div class="col-sm-6">    
                     <div class="card bg-light mb-3" style="width: 25rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Day 1</h5>
+                                <h5 class="card-title">Day 1: Chest and Triceps</h5>
                                   <ul>
                                   {{#each mscl}}
                                     {{#if_eq day 1}}
-                                  <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                  <p> - {{ex_name}}  {{intervals}} </p>
                                     {{/if_eq}}
                                   {{/each}}
                                   </ul>                       
@@ -87,11 +87,11 @@
             <div class="col-sm-6">    
                     <div class="card bg-light mb-3" style="width: 25rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Day 2</h5>
+                                <h5 class="card-title">Day 2: Legs and Abs</h5>
                                   <ul>
                                   {{#each mscl}}
                                     {{#if_eq day 2}}
-                                  <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                  <p> - {{ex_name}}  {{intervals}} </p>
                                     {{/if_eq}}
                                   {{/each}}
                                   </ul>                          
@@ -103,11 +103,11 @@
           <div class="col-sm-6">    
                     <div class="card bg-light mb-3" style="width: 25rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Day 3</h5>
+                                <h5 class="card-title">Day 3: Shoulders and Traps</h5>
                                   <ul>
                                   {{#each mscl}}
                                     {{#if_eq day 3}}
-                                  <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                  <p> - {{ex_name}}  {{intervals}} </p>
                                     {{/if_eq}}
                                   {{/each}}
                                   </ul>         
@@ -117,11 +117,11 @@
             <div class="col-sm-6">    
                     <div class="card bg-light mb-3" style="width: 25rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Day 4</h5>
+                                <h5 class="card-title">Day 4: Back, Biceps, and Abs</h5>
                                   <ul>
                                   {{#each mscl}}
                                     {{#if_eq day 4}}
-                                  <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                  <p> - {{ex_name}}  {{intervals}} </p>
                                     {{/if_eq}}
                                   {{/each}}
                                   </ul>
@@ -129,11 +129,46 @@
                     </div>                       
             </div>
         </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="card bg-light mb-3" style="width: 50rem;">
+              <div class="card-body" id="New">
+                <h2 class="card-title">Insert Your Own Exercise!</h2>
+                <form action="muscle_buildingCreate" method="POST">
+                <div class="form-group">
+                  <label for="formGroupExampleInput">Exercise Name</label>
+                  <input type="text" class="form-control" name="ex_name" placeholder="Bench Press">
+                </div>
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Body Part</label>
+                  <input type="text" class="form-control" name="body_part" placeholder="Chest">
+                </div>
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Intervals</label>
+                  <input type="text" class="form-control" name="intervals" placeholder="3x10">
+                </div>
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Day</label>
+                  <select class="custom-select" name="day">
+                    <option selected>Open to select day of workout</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                  </select>
+                  <br>
+                  <button type="submit">Add Exercise</button>
+                </div>
+                </form>
+              </div>
+            </div>
+            <br><br>
+          </div>
+        </div>
 </div>
-  <div class="footer">
-    <p>&copy; Copyright 2019</p>
-  </div>
+<div class="footer">
+  <p>&copy; Copyright 2019</p>
+</div>
 <script src="../public/js/index.js"></script>
 </body>
-
 </html>
