--- a/views/strength_training.handlebars
+++ b/views/strength_training.handlebars
@@ -26,7 +26,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">WORKOUTFLOW</a>
+        <a class="navbar-brand" href="/">WORKOUTFLOW</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
                         <p class="lead">Ready to get your heart pumping?
                             <br>
                             Follow this step by step guide to complete your
-                            cardio workout. Don’t forget hit play on your playlist!</p>
+                            strength training workout. Don’t forget hit play on your playlist!</p>
                         <hr class="my-4">
                     </div>
                 </div>
