--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -70,8 +70,8 @@
 <div class="container">
         <div class="row">
             <!-- to do -->
-            <div class="col-sm-6">    
-                    <div class="card bg-light mb-3" style="width: 25rem;">
+            <div class="col-sm-3">    
+                    <div class="card bg-light mb-3" style="width: 17rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Day 1: Chest and Triceps</h5>
                                   <ul>
@@ -84,8 +84,8 @@
                             </div>
                     </div>                       
             </div>
-            <div class="col-sm-6">    
-                    <div class="card bg-light mb-3" style="width: 25rem;">
+            <div class="col-sm-3">    
+                    <div class="card bg-light mb-3" style="width: 17rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Day 2: Legs and Abs</h5>
                                   <ul>
@@ -98,10 +98,8 @@
                             </div>
                     </div>                       
             </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6">    
-                    <div class="card bg-light mb-3" style="width: 25rem;">
+          <div class="col-sm-3">    
+                    <div class="card bg-light mb-3" style="width: 17rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Day 3: Shoulders and Traps</h5>
                                   <ul>
@@ -114,8 +112,8 @@
                             </div>
                     </div>                       
             </div>
-            <div class="col-sm-6">    
-                    <div class="card bg-light mb-3" style="width: 25rem;">
+            <div class="col-sm-3">    
+                    <div class="card bg-light mb-3" style="width: 17rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Day 4: Back, Biceps, and Abs</h5>
                                   <ul>
@@ -131,7 +129,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <div class="card bg-light mb-3" style="width: 50rem;">
+            <div class="card bg-light mb-3" style="width: 71rem;">
               <div class="card-body" id="New">
                 <h2 class="card-title">Insert Your Own Exercise!</h2>
                 <form action="muscle_buildingCreate" method="POST">
@@ -140,11 +138,7 @@
                   <input type="text" class="form-control" name="ex_name" placeholder="Bench Press">
                 </div>
                 <div class="form-group">
-                  <label for="formGroupExampleInput2">Body Part</label>
-                  <input type="text" class="form-control" name="body_part" placeholder="Chest">
-                </div>
-                <div class="form-group">
-                  <label for="formGroupExampleInput2">Intervals</label>
+                  <label for="formGroupExampleInput2">Sets/Reps</label>
                   <input type="text" class="form-control" name="intervals" placeholder="3x10">
                 </div>
                 <div class="form-group">
@@ -165,6 +159,7 @@
             <br><br>
           </div>
         </div>
+        <iframe src="https://open.spotify.com/embed/user/12168588908/playlist/4YvhNsxfaBVBOHuBybdS1A" width="1150" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 <div class="footer">
   <p>&copy; Copyright 2019</p>
