--- a/views/strength_training.handlebars
+++ b/views/strength_training.handlebars
@@ -69,52 +69,85 @@
     <div class="container">
         <div class="row">
             <!-- to do -->
-            <div class="col-sm-6">    
-                    <div class="card bg-light mb-3" style="width: 25rem;">
+            <div class="col-sm-4">    
+                    <div class="card bg-light mb-3" style="width: 23rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Day 1</h5>
+                                <h5 class="card-title">Day 1: Bench Day</h5>
                                     <ul>
                                     {{#each str}}
                                         {{#if_eq day 1}}
-                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                    <p> - {{ex_name}} {{intervals}} </p>
                                         {{/if_eq}}
                                     {{/each}}
                                     </ul>                        
                             </div>
                         </div>
             </div>
-            <div class="col-sm-6">    
-                    <div class="card bg-light mb-3" style="width: 25rem;">
+            <div class="col-sm-4">    
+                    <div class="card bg-light mb-3" style="width: 23rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Day 2</h5>
+                                <h5 class="card-title">Day 2: Deadlift Day</h5>
                                     <ul>
                                     {{#each str}}
                                         {{#if_eq day 2}}
-                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                    <p> - {{ex_name}} {{intervals}} </p>
                                         {{/if_eq}}
                                     {{/each}}
                                     </ul>                     
                             </div>
                         </div>
             </div>
-            <div class="col-sm-6">    
-                    <div class="card bg-light mb-3" style="width: 25rem;">
+            <div class="col-sm-4">    
+                    <div class="card bg-light mb-3" style="width: 23rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Day 3</h5>
+                                <h5 class="card-title">Day 3: Squat Day</h5>
                                     <ul>
                                     {{#each str}}
                                         {{#if_eq day 3}}
-                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                                    <p> - {{ex_name}} {{intervals}} </p>
                                         {{/if_eq}}
                                     {{/each}}
                                     </ul>                
                             </div>
                     </div>
             </div>
-            
-    <div class="footer">
-        <p>&copy; Copyright 2019</p>
-    </div>
+        </div>
+    <div class="row">
+          <div class="col-sm-12">
+            <div class="card bg-light mb-3" style="width: 71rem;">
+              <div class="card-body" id="New">
+                <h2 class="card-title">Insert Your Own Exercise!</h2>
+                <form action="strength_trainingCreate" method="POST">
+                <div class="form-group">
+                  <label for="formGroupExampleInput">Exercise Name</label>
+                  <input type="text" class="form-control" name="ex_name" placeholder="Squats">
+                </div>
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Sets/Reps</label>
+                  <input type="text" class="form-control" name="intervals" placeholder="3x5">
+                </div>
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Day</label>
+                  <select class="custom-select" name="day">
+                    <option selected>Open to select day of workout</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                  <br>
+                  <button type="submit">Add Exercise</button>
+                </div>
+                </form>
+              </div>
+            </div>
+            <br><br>
+          </div>
+        </div>
+    <iframe src="https://open.spotify.com/embed/user/jojomadclown/playlist/1k49riC4JGNKYLmaWpCFn0" width="1150" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</div>
+<div class="footer">
+  <p>&copy; Copyright 2019</p>
+</div>
+<script src ="../public/js/index.js"></script>
 </body>
-
 </html>
